ISPN-7659 Make integration tests work with JDK 9 ea-162
* Disable OSGi integration tests until PAXEXAM-810 is fixed
* Make all surefire/failsafe forks use ${jigsawForkJvmArgs}
  for the JDK9-specific VM arguments
* Support debugging with the $MAVEN_FORK_OPTS env variable.
* Upgrade maven-shade-plugin to 3.0.0 and fix the generation
  of the source jars for the uber-jar modules.